[gd_scene load_steps=21 format=3 uid="uid://ccbafmp5xuv54"]

[ext_resource type="Script" uid="uid://xdt5oe2unl8l" path="res://scenes/enemy/enemy.gd" id="1_a3pup"]
[ext_resource type="Texture2D" uid="uid://bocj4wlbgxhyr" path="res://assets/enemy/enemy_sheet.png" id="2_40wdo"]
[ext_resource type="Shader" uid="uid://bjyedjjnquudh" path="res://scenes/enemy/enemy.gdshader" id="2_cwlon"]
[ext_resource type="PackedScene" uid="uid://bucl4ei3ylyu8" path="res://scenes/components/health_component.tscn" id="3_40wdo"]
[ext_resource type="Texture2D" uid="uid://d0fww4avim5dn" path="res://assets/enemy/enemy_electrocute1.png" id="3_gl05p"]
[ext_resource type="Texture2D" uid="uid://vqw7njehqss6" path="res://assets/enemy/enemy_electrocute2.png" id="4_gl05p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_40wdo"]
radius = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nbhyu"]
resource_local_to_scene = true
shader = ExtResource("2_cwlon")
shader_parameter/hit_flash_color = Color(1, 1, 1, 1)
shader_parameter/hit_flash_on = false

[sub_resource type="AtlasTexture" id="AtlasTexture_tjssy"]
atlas = ExtResource("2_40wdo")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl05p"]
atlas = ExtResource("2_40wdo")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwlon"]
atlas = ExtResource("2_40wdo")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbhyu"]
atlas = ExtResource("2_40wdo")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13gj6"]
atlas = ExtResource("2_40wdo")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efjx"]
atlas = ExtResource("2_40wdo")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxgb"]
atlas = ExtResource("3_gl05p")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_peoo5"]
atlas = ExtResource("4_gl05p")
region = Rect2(0, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3pup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjssy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl05p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwlon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbhyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13gj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efjx")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peoo5")
}],
"loop": true,
"name": &"electrocuted",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_cwlon"]
resource_name = "new_animation"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nbhyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nbhyu"]
_data = {
&"RESET": SubResource("Animation_nbhyu"),
&"new_animation": SubResource("Animation_cwlon")
}

[node name="Enemy" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_a3pup")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_40wdo")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_desired_distance = 3.0
target_desired_distance = 3.0
path_postprocessing = 1
debug_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_nbhyu")
sprite_frames = SubResource("SpriteFrames_a3pup")
autoplay = "default"
frame = 3
frame_progress = 0.95632285

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HealthComponent" parent="." instance=ExtResource("3_40wdo")]
unique_name_in_owner = true
health_bar = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nbhyu")
}

[connection signal="target_reached" from="NavigationAgent" to="." method="_on_navigation_agent_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="on_damaged" from="HealthComponent" to="." method="_on_health_component_on_damage"]
[connection signal="on_dead" from="HealthComponent" to="." method="_on_health_component_on_dead"]
